@@ -1,3 +1,5 @@
+* Cleaned up event.js renaming confusing/contradictory variable names [jddalton]
+
 * Fix Event.stopObserving() IE error on elements with no observers. [jddalton]
 
 * Prevent getEventID from assigning `window` and `document` an eventID. [jddalton]
